fixed overlap issue

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@ body{
 #main-wrapper{
     width: 100%;
     height : 100%;
+    position: absolute;
+    display: flex;
 }
 #sent{
     min-width: 10%;
@@ -26,11 +28,12 @@ body{
     white-space: pre-wrap;
 }
 #messages{
-    max-height: 90%;
+    height: 70%;
     width: 100%;
-    border: 1px solid black;
+    border: 0px solid black;
     position: relative;
     text-align: center;
+    overflow-y: scroll;
 }
 #input-wrapper{
     position: fixed;
@@ -38,7 +41,8 @@ body{
     width: 100%;
     height: auto;
     text-align: center;
-    border: 1px solid black;
+    border: 0px solid black;
+    overflow: hidden;
   
 }
 #recieved{
